# satnogs-decoders

./: .gitattributes  .gitignore  .gitlab-ci.yml  .pylintrc  .yamllint  .yapfignore  MANIFEST.in  README.md  decode-multiple.py  setup.cfg  setup.py  tox.ini
contrib/: decode_multiple.py  docker-ksc.sh  generate_field_docstring.py
contrib/manage/: db_helpers.py  decode_frame.py  export_raw.py  fetch_frames_from_network.py  (+5 more)
ksy/: aausat4.ksy  acrux1.ksy  alsat1n.ksy  amicalsat.ksy  armadillo.ksy  ascii85test.ksy  asuphoenix.ksy  ax25frames.ksy  ax25monitor.ksy  b85decode.js  bisonsat.ksy  bobcat1.ksy  bugsat1.ksy  cape1.ksy  cas4.ksy  chomptt.ksy  csim.ksy  cspheader.ksy  cubebel1.ksy  cubesatsim.ksy  duchifat3.ksy  elfin.ksy  entrysat.ksy  equisat.ksy  eshail2.ksy  fox.ksy  irazu.ksy  irvine.ksy  irvine01.ksy  iss.ksy  lightsail2.ksy  meznsat.ksy  minxss.ksy  mitee1.ksy  mxl.ksy  mysat.ksy  neutron1.ksy  opssat1.ksy  origamisat1.ksy  painani.ksy  (+17 more)
manage/: decode_frame.py  export_raw.py  fetch_push_telemetry_from_network.py  fetch_telemetry.py  migrate_sids.py  push_telemetry.py  qth_locator.py  requirements.txt  satnogs_api_client.py
satnogsdecoders/: __init__.py  _version.py  decode_frame.py  decode_multiple.py
siriussat/: aUHF_msgid.json  generate_kaitai.ipynb  requirements.txt
skcube/: README.md  block4_cam.csv  block5_pwr.csv  block6_exp.csv  skcube_csv2kaitai.py  skcube_python2kaitai.py
strand1/: modem_beacon.csv  strand1_csv2kaitai.py
tests/: shared_methods.py  test_ascii85process.py  test_cape1.py  test_elfin_pp.py  test_entrysat.py  test_equisat.py
(+15 files in other folders)
